--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
             cursor: pointer;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
             transition: all 0.3s ease;
+            z-index: 10000; /* Butonun üstte olmasını sağlıyoruz */
         }
 
         /* Hover efekti */
