--- a/index.html
+++ b/index.html
@@ -165,14 +165,14 @@
             box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.8);
         }
 
-        /* Ses kontrol barı */
+        /* Yeni Ses Barı Tasarımı */
         #volume-bar {
             position: absolute;
             top: 25px;
             left: 80px;
-            width: 100px;
-            height: 5px;
-            background-color: rgba(255, 255, 255, 0.5);
+            width: 150px;
+            height: 10px;
+            background-color: #444;
             border-radius: 5px;
             display: none; /* Başlangıçta gizli */
             transition: all 0.3s ease;
@@ -197,6 +197,12 @@
             background-color: #fff;
             border-radius: 50%;
             cursor: pointer;
+        }
+
+        #volume-bar input::-webkit-slider-runnable-track {
+            height: 10px;
+            background-color: #aaa;
+            border-radius: 5px;
         }
     </style>
 </head>
